k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: us-east1-docker.pkg.dev/soy-lore-407417/web-app-repo/web-app:${SHORT_SHA}
        imagePullPolicy: Always
        resources:
          requests: 
            cpu: "0.3"
            memory: 500Mi
          limits:
            cpu: "0.3"
            memory: 500Mi
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /healthz.php
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
