k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: example-app
spec:
  containers:
  - name: example-app
    image: us-east1-docker.pkg.dev/terraform-tests-403719/terraform-tests-403719/old-onepet-app@sha256:c1ed9aa7e870e227ef1d0843100592282a24542c407c129aecd125c9adc6281d
    ports:
    - containerPort: 9000
      name: fastcgi
