k8s/service.bkp.yaml
apiVersion: v1
kind: Service
metadata:
  name: $GKE_SERVICE
spec:
  # serviceAccountName: $GKE_SERVICE_ACCOUNT
  type: LoadBalancer
  selector:
    app: $GKE_APP_NAME
  ports:
  - port: 80
    targetPort: 80
