k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  selector:
    app: $GKE_APP_NAME
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
